--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon-hf.png" />
+  <link rel="icon" type="image/png" href="./public/favicon-hf.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Instrument Hiring Management System by Hannah Feehan</title>
 </head>
